feat(T-002): fixed build issues