@@ -50,7 +50,7 @@ dependencies {
 
 sonar {
 	properties {
-		property "sonar.projectKey", "HassanAliCS1_TradingApi"
+		property "sonar.projectKey", "HassanAliCS1_tester"
 		property "sonar.organization", "hassanalics1"
 		property "sonar.host.url", "https://sonarcloud.io"
 		property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/test/jacocoTestReport.xml"
@@ -72,5 +72,6 @@ jacocoTestReport {
 
 test {
 	useJUnitPlatform()
+	jvmArgs(['--enable-preview'])
 	finalizedBy jacocoTestReport
 }
